--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.43.1",
     "jose": "^4.14.4",
     "lucide-react": "^0.507.0",
     "marked": "^15.0.11",
+    "motion": "^12.13.0",
     "mysql2": "^3.14.1",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.27",
