--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "zod": "^3.24.4"
   },
   "devDependencies": {
