--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.2",
+    "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "react-textarea-autosize": "^8.5.9",
     "rehype-sanitize": "^6.0.0",
